fix text align issue - news text

--- a/css/news.css
+++ b/css/news.css
@@ -26,6 +26,7 @@
   grid-template-columns: 1fr 3fr;
   gap: 10px;
   padding: 10px;
+  text-align: left;
 }
 
 .newsDate {
